--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <meta
       name="description"
-      content="Minfo vCard/Resume TailwindCSS HTML Template"
+      content="Poriya cv"
     />
     <meta name="author" content="Themearray" />
 
